--- a/src/App.css
+++ b/src/App.css
@@ -83,8 +83,12 @@
   @apply mt-5 text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl text-center;
 }
 
-.orange_gradient {
+/* .orange_gradient {
   @apply bg-gradient-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
+} */
+
+.orange_gradient {
+  @apply bg-gradient-to-r from-blue-500 via-purple-500 to-indigo-500 bg-clip-text text-transparent;
 }
 
 .desc {
@@ -107,8 +111,12 @@
   @apply w-7 h-7 rounded-full bg-white/10 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur flex justify-center items-center cursor-pointer;
 }
 
-.blue_gradient {
+/* .blue_gradient {
   @apply font-black bg-gradient-to-r from-blue-600 to-cyan-600 bg-clip-text text-transparent;
+} */
+
+.blue_gradient {
+  @apply font-black bg-gradient-to-r from-indigo-600 to-blue-500 bg-clip-text text-transparent;
 }
 
 .summary_box {
